# SEP_Paper_Version

./: CMakeLists.txt  Makefile  README.md  main.cpp  pipeline.sh  test.cpp
imaging/: CMakeLists.txt  common.h  complex.h  controller.h  deconvolution.h  direct_fourier_transform.h  fft.h  fits_image_writer.h  gains.h  gridder.h  imaging.h  msmfs_gridder.h  msmfs_nifty.h  nifty.h  restorer.h  system_test.h  timer.h  weighting.h  wprojection.h
imaging/src/: common.cu  complex.cu  controller.cu  deconvolution.cu  direct_fourier_transform.cu  fft.cu  fits_image_writer.cu  gains.cu  gridder.cu  imaging.cu  msmfs_gridder.cu  msmfs_nifty.cu  nifty.cu  restorer.cu  system_test.cu  timer.cu  weighting.cu  wprojection.cu
imaging_configs/: custom.yaml  default.yaml  full_array_nominal.yaml  gaussian.yaml  gleam_large.yaml  gleam_medium.yaml  gleam_small.yaml  vla.yaml
imaging_data/input/: GLEAM_small_subset_intensity.csv
imaging_data/output/: placeholder.txt
